# wildfire-spread-scenarios

./: LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
cfgs/LIDC/: PUNet.yaml  PUNet_trainer.yaml  base_config_clustering.yaml  base_config_image_cond.yaml  base_config_image_cond_sampling.yaml  base_config_shielding_guidance.yaml  dataset.yaml  trainer.yaml  wandb_clustering.yaml  wandb_naive_sampling.yaml  wandb_pg_multi_batch.yaml  wandb_pg_single_batch.yaml  wandb_punet_eval.yaml  wandb_spell_multi_batch.yaml  wandb_spell_single_batch.yaml
cfgs/cityscapes/: PUNet.yaml  PUNet_trainer.yaml  base_config_clustering.yaml  base_config_image_cond.yaml  base_config_image_cond_sampling.yaml  base_config_shielding_guidance.yaml  dataset.yaml  trainer.yaml  wandb_CADS.yaml  wandb_clustering.yaml  wandb_clustering_distance_function.yaml  wandb_naive_sampling.yaml  wandb_pg_alpha_search.yaml  wandb_pg_multi_batch.yaml  wandb_pg_single_batch.yaml  wandb_punet_eval.yaml  wandb_spell_multi_batch.yaml  wandb_spell_single_batch.yaml
cfgs/sampling_strategies_base_configs/: README.md  clustering.yaml  particle_guidance.yaml  shielding_guidance.yaml
cfgs/simfire/: PUNet.yaml  PUNet_trainer.yaml  base_config_clustering.yaml  base_config_image_cond.yaml  base_config_image_cond_sampling.yaml  base_config_shielding_guidance.yaml  dataset.yaml  trainer.yaml  wandb_clustering.yaml  wandb_naive_sampling.yaml  wandb_pg_multi_batch.yaml  wandb_pg_single_batch.yaml  wandb_punet_eval.yaml  wandb_spell_multi_batch.yaml  wandb_spell_single_batch.yaml
(+36 files in other folders)
